Create AWS Cloud Credentials  Changes to be committed: 	modified:   frontend/cmd/web/handlers.go 	modified:   frontend/cmd/web/main.go 	modified:   frontend/cmd/web/models.go 	modified:   frontend/cmd/web/repository.go 	modified:   frontend/cmd/web/routes.go 	modified:   frontend/static/templates/base-template.layout.html 	new file:   frontend/static/templates/create-credentials.page.html

--- a/frontend/static/templates/base-template.layout.html
+++ b/frontend/static/templates/base-template.layout.html
@@ -210,6 +210,9 @@
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="create-volume">Create Volume</a></li>
               </ul>
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item"> <a class="nav-link" href="create-credentials">Create AWS Credentials</a></li>
+              </ul>
             </div>
           </li>
           <li class="nav-item">
