Using struct CloudSnapsIDs instead of map for cloud snapshots list  Changes to be committed: 	modified:   broker/cmd/api/config.go 	modified:   broker/pkg/config/config.go 	modified:   broker/pkg/snapshots/snapshots.go 	modified:   frontend/cmd/web/models.go 	modified:   frontend/static/templates/snapshots.page.html

--- a/frontend/static/templates/snapshots.page.html
+++ b/frontend/static/templates/snapshots.page.html
@@ -64,7 +64,7 @@
                                 </thead>
                                 <tbody>
                                   <tr>
-                                  {{ range $snap := $snapvol }}
+                                  {{ range $snap := $snapvol.CloudSnaps }}
                                   {{ $snapid := index (split $snap.Id "/") 1 }}
                                     <td> <a href="volume/{{ $volume.VolumeID }}">  {{ index (split $snapid "-") 1 }} </a> </td>
                                     <td> {{ (index $snap.Metadata "updatetime") }} </td>
