Specific Snapshot Page added to the frontend  Changes to be committed: 	modified:   frontend/cmd/web/handlers.go 	modified:   frontend/cmd/web/models.go 	modified:   frontend/cmd/web/repository.go 	modified:   frontend/cmd/web/routes.go 	modified:   frontend/static/templates/secondary-template.layout.html 	new file:   frontend/static/templates/snap-specific.page.html 	modified:   frontend/static/templates/snapshots.page.html 	new file:   frontend/static/templates/thirdlevel-template.layout.html

--- a/frontend/static/templates/thirdlevel-template.layout.html
+++ b/frontend/static/templates/thirdlevel-template.layout.html
@@ -1,4 +1,5 @@
-{{define "secondary"}}
+{{define "thirdlevel"}}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -195,7 +196,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="../cluster">
+            <a class="nav-link" href="../../cluster">
               <i class="ti-server menu-icon"></i>
               <span class="menu-title">Cluster</span>
             </a>
@@ -208,39 +209,39 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../create-volume">Create Volume</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../create-volume">Create Volume</a></li>
               </ul>
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../create-credentials">Create AWS Credentials</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../create-credentials">Create AWS Credentials</a></li>
               </ul>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../nodes">
+            <a class="nav-link" href="../../nodes">
               <i class="ti-linux menu-icon"></i>
               <span class="menu-title">Nodes</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../volumes">
+            <a class="nav-link" href="../../volumes">
               <i class="ti-pie-chart menu-icon"></i>
               <span class="menu-title">Volumes</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../snapshots">
+            <a class="nav-link" href="../../snapshots">
               <i class="ti-save menu-icon"></i>
               <span class="menu-title">Snapshots</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../cloud-credentials">
+            <a class="nav-link" href="../../cloud-credentials">
               <i class="ti-cloud-up menu-icon"></i>
               <span class="menu-title">Cloud Credentials</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../documentation">
+            <a class="nav-link" href="../../documentation">
               <i class="ti-write menu-icon"></i>
               <span class="menu-title">Documentation</span>
             </a>
