improving the look of the create credentials page  Changes to be committed: 	modified:   frontend/static/templates/create-credentials.page.html 	modified:   frontend/static/templates/snap-specific.page.html

--- a/frontend/static/templates/create-credentials.page.html
+++ b/frontend/static/templates/create-credentials.page.html
@@ -19,42 +19,42 @@
                         {{with .Form.Errors.Get "cloud_credential_name"}}
                           <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input name="cloud_credential_name" type="text" class="form-control" id="cloud_credential_name" placeholder="cloud credential name" value="{{$newCloudCredential.CloudCredentialName}}" aria-label="cloud_credential_name">
+                        <input name="cloud_credential_name" type="text" class="form-control" id="cloud_credential_name" placeholder="aws-s3-creds" value="{{$newCloudCredential.CloudCredentialName}}" aria-label="cloud_credential_name">
                       </div>
                       <div class="form-group">
                         <label>Cloud Credential Access Key</label>
                         {{with .Form.Errors.Get "cloud_credential_access_key"}}
                           <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input name="cloud_credential_access_key" type="text" class="form-control" id="cloud_credential_access_key" placeholder="cloud credential access key" value="{{$newCloudCredential.CloudCredentialAccessKey}}" aria-label="cloud_credential_access_key">
+                        <input name="cloud_credential_access_key" type="text" class="form-control" id="cloud_credential_access_key" placeholder="AKIAVK..." value="{{$newCloudCredential.CloudCredentialAccessKey}}" aria-label="cloud_credential_access_key">
                       </div>
                       <div class="form-group">
                         <label>Cloud Credential Secret Key</label>
                         {{with .Form.Errors.Get "cloud_credential_secret_key"}}
                           <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input name="cloud_credential_secret_key" type="text" class="form-control" id="cloud_credential_secret_key" placeholder="cloud credential secret key" value="{{$newCloudCredential.CloudCredentialSecretKey}}" aria-label="cloud_credential_secret_key">
+                        <input name="cloud_credential_secret_key" type="password" class="form-control" id="cloud_credential_secret_key"  value="{{$newCloudCredential.CloudCredentialSecretKey}}" aria-label="cloud_credential_secret_key">
                       </div>
                       <div class="form-group">
                         <label>Cloud Credential Bucket Name</label>
                         {{with .Form.Errors.Get "cloud_credential_bucket_name"}}
                           <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input name="cloud_credential_bucket_name" type="text" class="form-control" id="cloud_credential_bucket_name" placeholder="cloud credential bucket name" value="{{$newCloudCredential.CloudCredentialBucketName}}" aria-label="cloud_credential_bucket_name">
+                        <input name="cloud_credential_bucket_name" type="text" class="form-control" id="cloud_credential_bucket_name" placeholder="portworx-bucket" value="{{$newCloudCredential.CloudCredentialBucketName}}" aria-label="cloud_credential_bucket_name">
                       </div>
                       <div class="form-group">
                         <label>Cloud Credential Region</label>
                         {{with .Form.Errors.Get "cloud_credential_region"}}
                           <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input name="cloud_credential_region" type="text" class="form-control" id="cloud_credential_region" placeholder="cloud credential region" value="{{$newCloudCredential.CloudCredentialRegion}}" aria-label="cloud_credential_region">
+                        <input name="cloud_credential_region" type="text" class="form-control" id="cloud_credential_region" placeholder="us-east-1" value="{{$newCloudCredential.CloudCredentialRegion}}" aria-label="cloud_credential_region">
                       </div>
                       <div class="form-group">
                         <label>Cloud Credential Endpoint</label>
                         {{with .Form.Errors.Get "cloud_credential_endpoint"}}
                           <label class="text-danger">{{.}}</label>
                         {{end}}
-                        <input name="cloud_credential_endpoint" type="text" class="form-control" id="cloud_credential_endpoint" placeholder="cloud credential endpoint" value="{{$newCloudCredential.CloudCredentialEndpoint}}" aria-label="cloud_credential_endpoint">
+                        <input name="cloud_credential_endpoint" type="text" class="form-control" id="cloud_credential_endpoint" placeholder="s3.amazonaws.com" value="{{$newCloudCredential.CloudCredentialEndpoint}}" aria-label="cloud_credential_endpoint">
                       </div>
                       <div class="form-group">
                         <label for="cloud_credential_disable_ssl">Cloud Credential Disable SSL</label>
