Added keycloak authentication to frontend!!  Changes to be committed: 	modified:   frontend/cmd/web/config.go 	new file:   frontend/cmd/web/keycloak.go 	modified:   frontend/cmd/web/main.go 	modified:   frontend/cmd/web/middleware.go 	modified:   frontend/cmd/web/models.go 	modified:   frontend/cmd/web/render.go 	modified:   frontend/cmd/web/repository.go 	modified:   frontend/cmd/web/routes.go 	modified:   frontend/frontend.dockerfile 	modified:   frontend/go.mod 	modified:   frontend/go.sum 	modified:   frontend/static/templates/base-template.layout.html 	new file:   frontend/static/templates/login.page.html 	modified:   kubernetes/pxFrontendDeploy.yaml

--- a/frontend/static/templates/base-template.layout.html
+++ b/frontend/static/templates/base-template.layout.html
@@ -178,7 +178,7 @@
                 Settings
               </a>
               <a class="dropdown-item">
-                <i class="ti-power-off text-primary"></i>
+                <i class="ti-power-off text-primary"  method="get" action="/logout" href="logout" ></i>
                 Logout
               </a>
             </div>
