--- a/frontend/static/templates/volumes-after-delete.page.html
+++ b/frontend/static/templates/volumes-after-delete.page.html
@@ -90,7 +90,7 @@
 
   <script>
     setTimeout(function(){
-        window.location.href = '../../frontend/volumes';
+        window.location.href = '../../portworx/client/volumes';
     }, 2000);
   </script>
 
