Changes to be committed: 	modified:   frontend/static/templates/login.page.html

--- a/frontend/static/templates/login.page.html
+++ b/frontend/static/templates/login.page.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Portworx Client Login</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="/static/vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="/static/vendors/base/vendor.bundle.base.css">
+  <link rel="stylesheet" href="/portworx/static/vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" href="/portworx/static/vendors/base/vendor.bundle.base.css">
   <!-- endinject -->
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/portworx/static/css/style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="/static/images/favicon.png" />
+  <link rel="shortcut icon" href="/portworx/static/images/favicon.png" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
               <div class="brand-logo">
-                <img src="/static/images/portworx-logo.svg" alt="logo">
+                <img src="/portworx/static/images/portworx-logo.svg" alt="logo">
               </div>
               <h4>Portworx Client</h4>
               <h6 class="font-weight-light">Sign in to continue.</h6>
