Changes to be committed: 	modified:   frontend/static/templates/login.page.html

--- a/frontend/static/templates/login.page.html
+++ b/frontend/static/templates/login.page.html
@@ -31,7 +31,7 @@
               </div>
               <h4>Portworx Client</h4>
               <h6 class="font-weight-light">Sign in to continue.</h6>
-              <form method="post" class="pt-3" action="/login" novalidate>
+              <form method="post" class="pt-3" action="/portworx/login" novalidate>
                 <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="form-group">
                   <label for="username">Username</label>
