--- a/frontend/static/templates/index.page.html
+++ b/frontend/static/templates/index.page.html
@@ -4,6 +4,7 @@
 
     {{ $clusterInfo := .JsonClusterInfo }}
     {{ $clusterCapacity := .JsonClusterCapacity }}
+    {{ $clusteralarms := .JsonClusterAlarms.AlarmList }}
 
       <div class="main-panel">
         <div class="content-wrapper">
@@ -53,6 +54,63 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12 stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Alarms and Messages of this cluster</h4>
+                  <div class="table-responsive pt-3">
+                    <table class="table table-bordered">
+                      <thead>
+                        <tr>
+                          <th>
+                            Alert Type
+                          </th>
+                          <th>
+                            Message
+                          </th>
+                          <th>
+                            Severity Type
+                          </th>
+                          <th>
+                            Timestamp
+                          </th>
+                          <th>
+                            First Seen
+                          </th>
+                          <th>
+                            Resource ID
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{ range $alarm := $clusteralarms }}
+                          <tr>
+                            <td>
+                              {{ $alarm.AlertType }}
+                            </td>
+                            <td>
+                              {{ $alarm.Message }}
+                            </td>
+                            <td>
+                              {{ $alarm.Severity }}
+                            </td>
+                            <td>
+                              {{ $alarm.Timestamp.Seconds }}
+                            </td>
+                            <td>
+                              {{ $alarm.FirstSeen.Seconds }}
+                            </td>
+                            <td>
+                              {{ $alarm.ResourceId }}
+                            </td>
+                          </tr>
+                        {{ end }}
+                      </tbody>
+                    </table>
                   </div>
                 </div>
               </div>
