Logout function  Changes to be committed: 	modified:   frontend/cmd/web/repository.go 	modified:   frontend/cmd/web/routes.go 	new file:   frontend/static/images/faces/pxlogo.png 	modified:   frontend/static/templates/base-template.layout.html 	modified:   frontend/static/templates/secondary-template.layout.html 	modified:   frontend/static/templates/thirdlevel-template.layout.html

--- a/frontend/static/templates/base-template.layout.html
+++ b/frontend/static/templates/base-template.layout.html
@@ -21,6 +21,7 @@
         }
   </style>
 
+
   <!-- endinject -->
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
@@ -45,7 +46,7 @@
           <div class="ps-lg-1">
           </div>
           <div class="d-flex align-items-center justify-content-between">
-            <a href="https://www.bootstrapdash.com/product/royalui/"><i class="ti-home me-3 text-white"></i></a>
+            <a href="cluster"><i class="ti-home me-3 text-white"></i></a>
             <button id="bannerClose" class="btn border-0 p-0">
               <i class="ti-close text-white me-0"></i>
             </button>
@@ -170,15 +171,11 @@
           </li>
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-              <img src="/portworx/client/static/images/faces/face21.jpg" alt="profile"/>
+              <img src="/portworx/client/static/images/faces/pxlogo.png" alt="profile"/>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item">
-                <i class="ti-settings text-primary"></i>
-                Settings
-              </a>
-              <a class="dropdown-item">
-                <i class="ti-power-off text-primary"  method="get" action="/logout" href="logout" ></i>
+              <a class="dropdown-item" href="logout">
+                <i class="ti-power-off text-primary"></i>
                 Logout
               </a>
             </div>
