fixing specific snapshot view  Changes to be committed: 	modified:   broker/cmd/api/handlers.go 	modified:   broker/pkg/snapshots/snapshots.go 	modified:   frontend/cmd/web/handlers.go 	modified:   frontend/cmd/web/repository.go 	modified:   frontend/cmd/web/routes.go 	modified:   frontend/static/templates/snapshots.page.html 	modified:   frontend/static/templates/thirdlevel-template.layout.html

--- a/frontend/static/templates/snapshots.page.html
+++ b/frontend/static/templates/snapshots.page.html
@@ -69,7 +69,7 @@
 
                                     {{ range $snap := $snaps }}
                                     {{ $snapid := index (split $snap.Id "/") 1 }}
-                                      <td> <a href="snapshot/{{ $snap.Id }}">  {{ index (split $snapid "-") 1 }} </a> </td>
+                                      <td> <a href="snapshot/{{ $key }}/{{ $snap.Id }}">  {{ index (split $snapid "-") 1 }} </a> </td>
                                       <td>  {{ $key }} </td>
                                       <td> {{ (index $snap.Metadata "updatetime") }} </td>
                                       <td> {{ (index $snap.Metadata "status") }} </td>
