--- a/frontend/static/templates/thirdlevel-template.layout.html
+++ b/frontend/static/templates/thirdlevel-template.layout.html
@@ -46,7 +46,7 @@
           <div class="ps-lg-1">
           </div>
           <div class="d-flex align-items-center justify-content-between">
-            <a href="../../cluster"><i class="ti-home me-3 text-white"></i></a>
+            <a href="../../../cluster"><i class="ti-home me-3 text-white"></i></a>
             <button id="bannerClose" class="btn border-0 p-0">
               <i class="ti-close text-white me-0"></i>
             </button>
@@ -174,7 +174,7 @@
               <img src="/portworx/client/static/images/faces/pxlogo.png" alt="profile"/>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-              <a class="dropdown-item" href="../../logout">
+              <a class="dropdown-item" href="../../../logout">
                 <i class="ti-power-off text-primary"></i>
                 Logout
               </a>
@@ -192,7 +192,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="../../cluster">
+            <a class="nav-link" href="../../../cluster">
               <i class="ti-server menu-icon"></i>
               <span class="menu-title">Cluster</span>
             </a>
@@ -205,42 +205,42 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../create-volume">Create Volume</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../../create-volume">Create Volume</a></li>
               </ul>
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../create-cloudsnap">Create CloudSnapshot</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../../create-cloudsnap">Create CloudSnapshot</a></li>
               </ul>
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../create-credentials">Create AWS Credentials</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../../../create-credentials">Create AWS Credentials</a></li>
               </ul>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../nodes">
+            <a class="nav-link" href="../../../nodes">
               <i class="ti-linux menu-icon"></i>
               <span class="menu-title">Nodes</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../volumes">
+            <a class="nav-link" href="../../../volumes">
               <i class="ti-pie-chart menu-icon"></i>
               <span class="menu-title">Volumes</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../snapshots">
+            <a class="nav-link" href="../../../snapshots">
               <i class="ti-save menu-icon"></i>
               <span class="menu-title">Snapshots</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../cloud-credentials">
+            <a class="nav-link" href="../../../cloud-credentials">
               <i class="ti-cloud-up menu-icon"></i>
               <span class="menu-title">Cloud Credentials</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../documentation">
+            <a class="nav-link" href="../../../documentation">
               <i class="ti-write menu-icon"></i>
               <span class="menu-title">Documentation</span>
             </a>
