little issue with the template  Changes to be committed: 	modified:   frontend/static/templates/snap-specific.page.html

--- a/frontend/static/templates/snap-specific.page.html
+++ b/frontend/static/templates/snap-specific.page.html
@@ -24,7 +24,7 @@
                       </div>
                       <div class="ml-xl-4">
                         <h6 class="font-weight-light mb-xl-4">Source Volume ID:</h6>
-                        <h6 class="font-weight-light mb-xl-3"><a href="../../volume/{{ $snapSpecific.CloudSnap.SrcVolumeId }}">{{ $snapSpecific.CloudSnap.SrcVolumeId }}</a></h6>                        
+                        <h6 class="font-weight-light mb-xl-3"><a href="../../../volume/{{ $snapSpecific.CloudSnap.SrcVolumeId }}">{{ $snapSpecific.CloudSnap.SrcVolumeId }}</a></h6>                        
                       </div>
                       <div class="ml-xl-4">
                         <h6 class="font-weight-light mb-xl-4">CloudSnap Type:</h6>
