--- a/frontend/static/templates/cloud-credentials.page.html
+++ b/frontend/static/templates/cloud-credentials.page.html
@@ -24,6 +24,12 @@
                           <th>
                             Bucket Name
                           </th>
+                          <th>
+                            Endpoint
+                          </th>
+                          <th>
+                            Region
+                          </th>
                         </tr>
                       </thead>
                       <tbody>
@@ -35,10 +41,16 @@
                             {{ $index }}
                           </td>
                           <td>
-                            {{ $credential.Name }}
+                            {{ $credential.CredentialInspect.Name }}
                           </td>
                           <td>
-                            {{ $credential.Bucket }}
+                            {{ $credential.CredentialInspect.Bucket }}
+                          </td>
+                          <td>
+                            {{ $credential.Endpoint }}
+                          </td>
+                          <td>
+                            {{ $credential.Region }}
                           </td>
                         </tr>
                         {{ end }}
