--- a/frontend/static/templates/snap-specific.page.html
+++ b/frontend/static/templates/snap-specific.page.html
@@ -55,18 +55,18 @@
                                 </td>
                               </tr>
                               <tr>
-                                <td class="font-weight-bold mb-0 w-50 px-0">Compressed Snapshot Size (Bytes)</td>
+                                <td class="font-weight-bold mb-0 w-50 px-0">Compressed Snapshot Size</td>
                                 <td class="w-50 px-0">
                                   <h5 class="font-weight-normal mb-0">
-                                    <a href="#!" class="btn btn-info" >{{ $snapSpecific.CloudSnap.Metadata.compressedSizeBytes }}</a>
+                                    <a href="#!" class="btn btn-info" >{{ byteToMegabyte $snapSpecific.CloudSnap.Metadata.compressedSizeBytes }} MB </a>
                                   </h5>
                                 </td>
                               </tr>
                               <tr>
-                                <td class="font-weight-bold mb-0 w-50 px-0"> Snapshot Size (Bytes)</td>
+                                <td class="font-weight-bold mb-0 w-50 px-0"> Snapshot Size</td>
                                 <td class="w-50 px-0">
                                   <h5 class="font-weight-normal mb-0">
-                                    <a href="#!" class="btn btn-info" >{{ $snapSpecific.CloudSnap.Metadata.sizeBytes }}</a>
+                                    <a href="#!" class="btn btn-info" >{{ byteToMegabyte $snapSpecific.CloudSnap.Metadata.sizeBytes }} MB </a>
                                   </h5>
                                 </td>
                               <tr>
