external documentation  Changes to be committed: 	modified:   frontend/cmd/web/routes.go 	modified:   frontend/static/templates/base-template.layout.html 	modified:   frontend/static/templates/secondary-template.layout.html 	modified:   frontend/static/templates/thirdlevel-template.layout.html

--- a/frontend/static/templates/thirdlevel-template.layout.html
+++ b/frontend/static/templates/thirdlevel-template.layout.html
@@ -240,9 +240,9 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../../documentation">
+            <a class="nav-link" href="https://documenter.getpostman.com/view/17794050/VUqpsxJW">
               <i class="ti-write menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <span class="menu-title">Documentation (external)</span>
             </a>
           </li>
         </ul>
